# evennia_discord_gateway

./: .gitignore  README.md  pyproject.toml
evennia_discord_gateway.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
gateway/: bot.py  config.py  image_helpers.py  telnet_session.py
tests/integration/: test_installation.py
tests/unit/: test_bot.py  test_config.py  test_image_delivery.py  test_image_helpers.py  test_image_integration.py  test_security.py
